DigicielFull/force-app/main/default/objects/gnx__GonexaSign__c/gnx__GonexaSign__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Gonexa Sign</label>
</CustomObject>