DigicielFull/force-app/main/default/objects/gnx__GonexaSign__c/fields/gnx__Branding_Id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Branding_Id__c</fullName>
    <label>Branding ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>