DigicielFull/force-app/main/default/objects/gnx__GonexaSign__c/fields/gnx__Email_template_Id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Email_template_Id__c</fullName>
    <label>Email template ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>