DigicielFull/force-app/main/default/objects/gnx__GonexaSign__c/fields/gnx__External_Id__c.field-meta.xml
<CustomField>
    <fullName>gnx__External_Id__c</fullName>
    <description>Nécessaire uniquement s&apos;il n&apos;y a pas d&apos;autres moyens pour aller chercher l&apos;information de mise à jour de la signature</description>
    <label>Messaging service - Certified</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>