DigicielFull/force-app/main/default/objects/gnx__GonexaSign__c/fields/gnx__Initials__c.field-meta.xml
<CustomField>
    <fullName>gnx__Initials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paraphes</label>
    <type>Checkbox</type>
</CustomField>