DigicielFull/force-app/main/default/objects/gnx__GonexaSign__c/fields/gnx__Two_factor_auth__c.field-meta.xml
<CustomField>
    <fullName>gnx__Two_factor_auth__c</fullName>
    <defaultValue>&quot;SMS by default&quot;</defaultValue>
    <description>Picklist(SMS, Email, SMS by Default)</description>
    <label>MFA method</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>