DigicielFull/force-app/main/default/objects/gnx__GonexaSign__c/fields/gnx__Validity_duration__c.field-meta.xml
<CustomField>
    <fullName>gnx__Validity_duration__c</fullName>
    <label>Validity period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>